--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   font-family: sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
@@ -11,10 +13,14 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 20px;
 }
 
 input[type="file"] {
   width: 200px;
+  padding: 10px;
+  border: none;
+  background-color: #f2f2f2;
 }
 
 button {
